[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/scenes/OptionsPage/OptionsPage.gd" type="Script" id=1]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=2]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=3]
[ext_resource path="res://scripts/scenes/OptionsPage/GraphicsBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/scenes/OptionsPage/VSyncBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/scenes/OptionsPage/FPSBox.gd" type="Script" id=6]
[ext_resource path="res://scripts/scenes/OptionsPage/PixelsnapBox.gd" type="Script" id=7]
[ext_resource path="res://scripts/scenes/OptionsPage/QualityBox.gd" type="Script" id=8]
[ext_resource path="res://scripts/scenes/OptionsPage/MusicBox.gd" type="Script" id=9]
[ext_resource path="res://scenes/controller-input-test/joypads.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/controller-input-test/joypads.gd" type="Script" id=11]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[node name="OptionsPage" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.5
margin_right = -1.5
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -301.0
margin_top = 5.0
margin_right = 493.0
margin_bottom = 591.0
custom_fonts/font = ExtResource( 2 )

[node name="Controls" type="Tabs" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )

[node name="Label" type="Label" parent="TabContainer/Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -118.5
margin_right = 107.0
margin_bottom = 118.5
custom_fonts/font = ExtResource( 2 )
text = "KEY_CONTROLS"

[node name="ApplyButton2" type="Button" parent="TabContainer/Controls"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.5
margin_top = -80.0
margin_right = 105.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
shortcut = SubResource( 2 )
text = "KEY_APPLY"
flat = true

[node name="Theme" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Theme"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.5
margin_top = -276.5
margin_right = 289.5
margin_bottom = 278.5

[node name="Label" type="Label" parent="TabContainer/Theme/VBoxContainer"]
margin_right = 558.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_UI_THEME"
align = 1
valign = 1

[node name="CheckButton" type="CheckBox" parent="TabContainer/Theme/VBoxContainer"]
visible = false
margin_top = 43.0
margin_right = 558.0
margin_bottom = 82.0
text = "Apply to Game's UI, not only of User's UI"

[node name="Yellow" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 35.0
margin_right = 558.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Yellow"

[node name="Neon" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 76.0
margin_right = 558.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Neon"

[node name="Alien" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 117.0
margin_right = 558.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Alien"

[node name="Light" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 158.0
margin_right = 558.0
margin_bottom = 195.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Light"

[node name="Solarized_dark" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 199.0
margin_right = 558.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Solarized_dark"

[node name="Solarized_light" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 240.0
margin_right = 558.0
margin_bottom = 277.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Solarized_light"

[node name="Grey" type="Button" parent="TabContainer/Theme/VBoxContainer"]
visible = false
margin_top = 301.0
margin_right = 558.0
margin_bottom = 340.0
custom_fonts/font = ExtResource( 2 )
text = "Custom Theme"

[node name="Red" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 281.0
margin_right = 558.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Red"

[node name="Green" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 322.0
margin_right = 558.0
margin_bottom = 359.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Green"

[node name="Blue" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 363.0
margin_right = 558.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Blue"

[node name="Default" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 404.0
margin_right = 558.0
margin_bottom = 441.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Default"

[node name="Old" type="Button" parent="TabContainer/Theme/VBoxContainer"]
margin_top = 445.0
margin_right = 558.0
margin_bottom = 482.0
custom_fonts/font = ExtResource( 2 )
text = "KEY_Old"

[node name="Language" type="Tabs" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 3 )

[node name="ApplyButton3" type="Button" parent="TabContainer/Language"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -69.0
margin_right = 89.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
shortcut = SubResource( 2 )
text = "KEY_APPLY"
flat = true

[node name="Europe" type="VBoxContainer" parent="TabContainer/Language"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.5
margin_top = -155.0
margin_right = 65.5
margin_bottom = 155.0

[node name="Englisch" type="Button" parent="TabContainer/Language/Europe"]
margin_right = 131.0
margin_bottom = 39.0
text = "LANG_EN"

[node name="Portuguese" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 43.0
margin_right = 131.0
margin_bottom = 82.0
text = "LANG_PT"

[node name="French" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 86.0
margin_right = 131.0
margin_bottom = 125.0
text = "LANG_FR"

[node name="Polisch" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 129.0
margin_right = 131.0
margin_bottom = 168.0
text = "LANG_PL"

[node name="Detusch" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 172.0
margin_right = 131.0
margin_bottom = 211.0
text = "LANG_DE"

[node name="Italiano" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 215.0
margin_right = 131.0
margin_bottom = 254.0
text = "LANG_IT"

[node name="Spanisch" type="Button" parent="TabContainer/Language/Europe"]
margin_top = 258.0
margin_right = 131.0
margin_bottom = 297.0
text = "LANG_ES"

[node name="Label" type="Label" parent="TabContainer/Language"]
margin_left = 40.4999
margin_top = -364.5
margin_right = 80.4999
margin_bottom = -325.5

[node name="Graphics & Audio" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Graphics & Audio"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GraphicsBox" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer"]
margin_right = 391.0
margin_bottom = 533.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
margin_right = 391.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_GRAPHICS"
align = 1
valign = 1

[node name="Label2" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
visible = false
margin_top = 136.0
margin_right = 365.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_3D_NW"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
margin_top = 161.0
margin_right = 391.0
margin_bottom = 329.0

[node name="VSyncBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
editor/display_folded = true
margin_right = 391.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/VSyncBox"]
margin_right = 333.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "VSync"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/VSyncBox"]
margin_left = 337.0
margin_right = 391.0
margin_bottom = 39.0

[node name="FPSBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
margin_top = 43.0
margin_right = 391.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox"]
margin_right = 333.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_FPS"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/FPSBox"]
margin_left = 337.0
margin_right = 391.0
margin_bottom = 39.0

[node name="PixelSnapBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
editor/display_folded = true
margin_top = 86.0
margin_right = 391.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/PixelSnapBox"]
margin_right = 333.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Pixel Snap"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/PixelSnapBox"]
margin_left = 337.0
margin_right = 391.0
margin_bottom = 39.0

[node name="QualityBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer"]
margin_top = 129.0
margin_right = 391.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/QualityBox"]
margin_right = 333.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Voxel Cone Tracing"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/VBoxContainer/QualityBox"]
margin_left = 337.0
margin_right = 391.0
margin_bottom = 39.0

[node name="ApplyButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
margin_top = 333.0
margin_right = 391.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.596078, 0.596078, 0.596078, 1 )
shortcut = SubResource( 2 )
text = "KEY_APPLY"
flat = true

[node name="Advanced" type="CheckButton" parent="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox"]
margin_top = 494.0
margin_right = 391.0
margin_bottom = 533.0
text = "KEY_AO"
align = 1

[node name="MusicBox" type="VBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer"]
margin_left = 395.0
margin_right = 786.0
margin_bottom = 533.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_right = 391.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_MUSIC"
align = 1
valign = 1

[node name="VolumeBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
editor/display_folded = true
margin_top = 64.0
margin_right = 391.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
margin_right = 391.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_VOLUME"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
visible = false
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/VolumeBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 3 )
text = "Unmuted"
flat = true

[node name="VolumeBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 128.0
margin_right = 391.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true
ticks_on_borders = true

[node name="MusicBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
editor/display_folded = true
margin_top = 192.0
margin_right = 391.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
margin_right = 391.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_BACKGROUND"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
visible = false
margin_left = 157.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 4 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MusicBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 4 )
text = "Unmuted"
flat = true

[node name="MusicBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 256.0
margin_right = 391.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true
ticks_on_borders = true

[node name="SFXBox" type="HBoxContainer" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 320.0
margin_right = 391.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
margin_right = 391.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "KEY_SFX"
align = 1
valign = 1

[node name="OffButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
visible = false
margin_left = 127.0
margin_right = 250.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 5 )
text = "Muted"
flat = true

[node name="OnButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/SFXBox"]
visible = false
margin_left = 193.0
margin_right = 382.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
group = SubResource( 5 )
text = "Unmuted"
flat = true

[node name="SFXBar" type="HSlider" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 384.0
margin_right = 391.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -60.0
max_value = 12.0
rounded = true
allow_greater = true
allow_lesser = true
ticks_on_borders = true

[node name="MenuButton" type="Button" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 448.0
margin_right = 391.0
margin_bottom = 487.0
text = "Import your own music"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Graphics & Audio/HBoxContainer/MusicBox"]
margin_top = 491.0
margin_right = 391.0
margin_bottom = 530.0
editable = false
placeholder_text = "Path of selected file"
caret_blink = true

[node name="FileDialog" type="FileDialog" parent="TabContainer/Graphics & Audio"]
margin_left = 395.0
margin_top = -19.0
margin_right = 914.0
margin_bottom = 456.0
window_title = "Otw√≥rz plik"
mode = 0
access = 2
filters = PoolStringArray( "*ogg", "*wav" )
show_hidden_files = true
current_dir = "C:/Users/Karol/Documents/pixel-zone-master"
current_path = "C:/Users/Karol/Documents/pixel-zone-master/"

[node name="Controller Test" type="Tabs" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 49.0
margin_right = -4.0
margin_bottom = -4.0

[node name="joypads" parent="TabContainer/Controller Test" instance=ExtResource( 10 )]
script = ExtResource( 11 )

[node name="Custom_Music" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="TabContainer/Controls/ApplyButton2" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="TabContainer/Language/ApplyButton3" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Englisch" to="." method="_on_Englisch_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Portuguese" to="." method="_on_Portuguese_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/French" to="." method="_on_French_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Polisch" to="." method="_on_Polisch_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Detusch" to="." method="_on_Detusch_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Italiano" to="." method="_on_Italiano_pressed"]
[connection signal="pressed" from="TabContainer/Language/Europe/Spanisch" to="." method="_on_Spanisch_pressed"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/HBoxContainer/GraphicsBox/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="TabContainer/Graphics & Audio/HBoxContainer/MusicBox/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="file_selected" from="TabContainer/Graphics & Audio/FileDialog" to="." method="_on_FileDialog_file_selected"]
